[package]
name = "par-lr"
version = "0.1.0"
authors = ["refefer <refefer@gmail.com>"]

[dependencies]
tange-collection = { path = "/home/andrew/sandbox/tange/tange-collection" }
tange = "0.1"
svmloader = { git = "https://github.com/Refefer/svm-loader" }
rand = "0.6.1"
serde = "1.0"
serde_derive = "1.0"
env_logger = "0.5.10"
clap = "2.26.0"
log = "0.4.3"

[[bin]]
name = "par-lr"

[lib]
name = "parlr"
path = "src/lib.rs"
